Swagger favourite v2 (after rebasing main and generating Swagger docs)
